# PVS-Studio-Tracker

./: .editorconfig  .env.example  .env_example  .gitignore  Actual_warnings.csv  CURSOR.md  INLINE_CODE_GUIDE.md  InlineCode.md  QUICK_REFERENCE.md  QWEN.md  README.md  SONARQUBE_TRANSFORMATION.md  migrate.py  pvs_snapshot.py  pvs_tracker.db  pyproject.toml
.codex/: context.md  mcp.json  skills.json
.cursor/: README.md  context.md  mcp.json  rules.md  skills.json  spec.md
.qwen/: context.md  rules.md  settings.json  spec.md
PVS_Sonar_WebHook_FastAPI/: .env.example  .gitignore  INSTALL.md  README.md  init_db.py  install_deps.py  main.py  pytest.ini  requirements.txt  run_scanner.py  test_import.py  test_refactor.py  test_webhooks.py
deploy/: README.md
docs/: README.md  inline-code-viewer.md  jenkins-ci.md  quick-reference.md  rest-queue.md  v0.2-transformation.md  zero-downtime-deployment.md
pvs_tracker/: __init__.py  admin_utils.py  api.py  artifact_storage.py  auth.py  auth_service.py  ci_activity_log.py  ci_config.py  classifier_parser.py  code_viewer.py  dashboard_context.py  dashboard_history.py  db.py  db_migrate_ci.py  file_resolver.py  git_integration.py  health.py  inbound_webhooks.py  incremental.py  integration_health.py  issue_activity.py  issue_author.py  issues_query.py  jenkins_service.py  jira_service.py  jira_sync.py  main.py  models.py  notifications.py  parser.py  platforms.py  project_ci.py  project_form_context.py  project_groups.py  project_manage.py  project_urls.py  project_version.py  quality_gate.py  repository_service.py  (+10 more)
(+199 files in other folders)
