[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pvs-tracker"
version = "0.1.0"
description = "Инкрементальный трекер отчётов PVS-Studio"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sqlmodel>=0.0.14",
    "pydantic>=2.6.0",
    "pydantic-settings>=2.2.0",
    "jinja2>=3.1.3",
    "python-multipart>=0.0.9",
    "ldap3>=2.9.1",
    "itsdangerous>=2.1.2",
    "httpx>=0.27.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.1.0",
    "sqlalchemy>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.3.0",
    "mypy>=1.9.0",
    "python-dotenv>=1.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["pvs_tracker"]

[tool.ruff]
target-version = "py310"
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "SIM", "TCH"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = ["slow: marks tests as slow"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict = true